# tilinpaatos_document_scanner

./: .gitignore  main.py  pyproject.toml
config/: extraction_config.json
document_scanner/: extraction_structures.py  openai_utils.py  pdf_utils.py  prompts.py  scanner.py  test_api.py
